...
                    </view>
                    <navigationItem key="navigationItem" title="GamesTODO" id="02Z-JV-4WJ">
                        <barButtonItem key="backBarButtonItem" title=" " id="Zlq-md-XLZ"/>
                        <barButtonItem key="leftBarButtonItem" systemItem="search" id="cTV-0I-i0T">
                            <color key="tintColor" red="0.26274509800000001" green="0.2901960784" blue="0.3294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="searchGamesButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <segue destination="y8D-9S-A1q" kind="show" id="mHC-jh-b23"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="as2-Q1-HC9">
                            <color key="tintColor" red="0.26274509800000001" green="0.2901960784" blue="0.3294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="addGameButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <segue destination="b3l-Ph-9KL" kind="show" identifier="addNewgame" id="IHd-3o-x9G"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                        <rect key="frame" x="130" y="0.0" width="126" height="32"/>
                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <color key="textColor" red="0.27685046200000002" green="0.35365754370000002" blue="0.39428466559999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="genreField"/>
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="ZcN-s4-blO" userLabel="FinishedViewHolder">
                                <rect key="frame" x="91.5" y="228" width="137.5" height="30"/>
...
                            <constraint firstItem="e4f-Ic-yoS" firstAttribute="bottom" secondItem="Zu4-OA-Tsq" secondAttribute="bottom" constant="16" id="jtD-Gt-gjO"/>
                            <constraint firstItem="e4f-Ic-yoS" firstAttribute="trailing" secondItem="q5i-sx-qWa" secondAttribute="trailing" constant="32" id="sSp-NR-H7E"/>
                            <constraint firstItem="GOQ-YX-mKb" firstAttribute="leading" secondItem="e4f-Ic-yoS" secondAttribute="leading" id="w1R-uH-8yb"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="e4f-Ic-yoS"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="addGameView"/>
                        </userDefinedRuntimeAttributes>
                    </view>
                    <navigationItem key="navigationItem" id="era-EI-7fL">
                        <barButtonItem key="backBarButtonItem" title=" " id="TMF-rK-fwv"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="byl-f7-WgX">
                            <color key="tintColor" red="0.26274509800000001" green="0.2901960784" blue="0.3294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                    <outlet property="releaseDateLabel" destination="8bk-X6-xmw" id="Wfe-ea-Wlj"/>
                                    <outlet property="titleLabel" destination="bps-9Q-uBw" id="5hF-8d-OEh"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="searchViewTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="y8D-9S-A1q" id="pbh-DH-MSm"/>
                            <outlet property="delegate" destination="y8D-9S-A1q" id="zBE-6H-iZl"/>
                        </connections>
                    </tableView>
...
                <tableViewController id="AAW-2e-OSo" customClass="SelectorTableViewController" customModule="GamesTODO" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="PEI-vI-o3v">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="pickGenreTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="AAW-2e-OSo" id="yKo-L3-aFO"/>
                            <outlet property="delegate" destination="AAW-2e-OSo" id="nIn-IX-iBs"/>
                        </connections>
                    </tableView>
...
